# GateTrader

./: .gitignore  Cargo.toml  README.md  rust-toolchain  rustfmt.toml
.github/workflows/: codecov.yml  lint.yml  release.yml  tests.yml
src/: auth.rs  main.rs  rest.rs  utils.rs  ws.rs
src/ws/: channels.rs
