[package]
name = "gatetrader"
version = "0.1.0"
authors = ["Aetf <aetf@unlimited-code.works>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-std = { version = "1.9.0", features = ["attributes"] }
hex = "0.4.3"
hmac = "0.11.0"
percent-encoding = "2.1.0"
sha2 = "0.9.5"
surf = { version = "2.2.0", default-features = false, features = ["h1-client-rustls", "middleware-logger"] }
