[package]
name = "gatetrader"
version = "0.1.0"
authors = ["Aetf <aetf@unlimited-code.works>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-channel = "1.6.1"
async-std = { version = "1.9.0", features = ["attributes"] }
async-tungstenite = { version = "0.13.1", features = ["async-std-runtime", "async-tls"] }
futures-util = { version = "0.3.15", features = ["sink"] }
hex = "0.4.3"
hmac = "0.11.0"
percent-encoding = "2.1.0"
rust_decimal = { version = "1.13.0", features = ["serde-str"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.9.5"
surf = { version = "2.2.0", default-features = false, features = ["h1-client-rustls", "middleware-logger"] }
